# mpi-rma_practice

./: .gitignore  CMakeLists.txt  README.md  pip_requirements.txt
mpi-rma_practice/: main.c  main.cpp
mpi-rma_practice/include/: comm.h  comm.hpp  io.h  io.hpp  net.h  utils.h
mpi-rma_practice/src/: io.c  io.cpp  main.c  net.c
python/graph/: line.py
python/utils/: __init__.py  io.py
